--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -508,6 +508,13 @@ textarea {
 			-moz-transform: translatex(-12.5rem) !important;
 			-ms-transform: translatex(-12.5rem) !important;
 			transform: translatex(-12.5rem) !important;
+			@include responsive(s2){
+				left: 0;
+				-webkit-transform: translatex(0rem) !important;
+				-moz-transform: translatex(0rem) !important;
+				-ms-transform: translatex(0rem) !important;
+				transform: translatex(0rem) !important;
+			}
 			margin-top: 2em;
 			margin-bottom: 2.85rem;
 			padding-left: 20px;
@@ -659,6 +666,9 @@ textarea {
 			right: 1.2em;
 			background-image: url('../../../images/lien-btn-filter.svg');
 			background-color: transparent;
+			@include responsive(s2){
+				right: 2em;
+			}
 		}
 	}
 	ul {
