--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -431,10 +431,13 @@ textarea {
 		height: 15em;
 		width: 7em;
 		margin-left: -3.5em;
-		left: 70%;
+		left: 75%;
 		bottom: 4em;
 		background-image: url('../../../images/lien-abf-top.svg');
 		background-repeat: no-repeat;
+		@include responsive(s1){
+			left: 80%;
+		}
 		@include responsive(s2) {
 			display: none!important;
 		}
@@ -451,9 +454,12 @@ textarea {
 	.decoration-1{
 		height: 25em;
 		width: 25em;
-		left: 70%;
+		left: 75%;
 		margin-left: -12.5em;
 		top: 25%;
+		@include responsive(s1) {
+			left: 80%;
+		}
 	}
 	.decoration-2 {
 		height: 60em;
@@ -651,10 +657,8 @@ textarea {
 			text-transform: uppercase;
 			color: $color-orange!important;
 			@include transition(0.25s);
-			&:hover,
-			&:focus {
-				border-left: 4px solid rgba(88, 88, 90, 1);
-				@include transition(0.25s);
+			@include responsive(s2){
+				font-size: 1.4em!important;
 			}
 		}
 		button {
@@ -668,6 +672,9 @@ textarea {
 			background-color: transparent;
 			@include responsive(s2){
 				right: 2em;
+				height: 20px;
+				width: 20px;
+				top: 1.6em;
 			}
 		}
 	}
