--- a/assets/scss/base/includes/menu.scss
+++ b/assets/scss/base/includes/menu.scss
@@ -229,7 +229,7 @@
 						-webkit-transition: background 0.3s, color 0.3s;
 						transition: background 0.3s, color 0.3s;
 						font-family: $font-secondary;
-						color: $color-white;
+						color: $color-dark-gray;
 						font-weight: 400;
 						&:hover{
 							text-decoration: none;
@@ -264,6 +264,7 @@
 						@include responsive(s2) {
 							font-size: 2.6rem!important;
 							font-weight: 400;
+							color: $color-white;
 						}
 						@include responsive(s4) {
 							font-size: 2rem!important;
