--- a/assets/scss/pages/index.scss
+++ b/assets/scss/pages/index.scss
@@ -233,6 +233,7 @@ body {
 	line-height: 1.6em;
 	text-align: center;
 	padding: 0px 30%;
+	font-weight: normal!important;
 	@include responsive(s2) {
 		margin-bottom: 0.2em;
 		margin-top: 0.2em;
@@ -270,7 +271,7 @@ body {
 	background-color: rgba(87, 52, 34, 0.6);
 	border: none;
 	width: 100%;
-	border-radius: 1.8em;
+	border-radius: 10px;
 	color: $color-white !important;
 	height: 60px;
 	padding: 0 1.5em;
@@ -475,12 +476,20 @@ textarea {
 		left: 0%;
 		@include opacity(0.03);
 	}
+	.container{
+		height: 100vh;
+	}
 	.row-home {
-		margin-top: 12.28em;
+		height: 100vh;
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+		margin-top: 70px;
 		@include responsive(s2) {
-			margin-top: 7.14em;
+			margin-top: 40px;
 		}
 		h1 {
+			margin-top: 0px;
 			&:after {
 				content: '';
 				position: absolute;
@@ -577,6 +586,7 @@ textarea {
 			}
 		}
 		.p-light{
+			font-size: 1rem;
 			margin-bottom: 2em;
 		}
 		h3{
@@ -607,7 +617,7 @@ textarea {
 			float: left;
 			width: calc(100% - 6em);
 			font-family: $font-secondary;
-			font-size: 1.2em;
+			font-size: 1rem;
 			color: $color-dark-gray;
 			margin-bottom: 1.4em;
 			line-height: 1.4em;
@@ -646,6 +656,7 @@ textarea {
 		font-family: $font-secondary;
 		color: $color-dark-gray;
 		margin-bottom: 3em;
+		font-size: 1rem;
 	}
 	.box-relative{
 		@extend .default-section;
@@ -860,7 +871,7 @@ textarea {
 	}
 	#form-contact{
 		input, textarea{
-			border-radius: 40px;
+			border-radius: 10px;
 			background-color: $color-white;
 			color: $color-dark-gray!important;
 			margin-bottom: 1.4em;
@@ -870,7 +881,7 @@ textarea {
 			}
 		}
 		textarea{
-			border-radius: 25px!important;
+			border-radius: 10px!important;
 		}
 		button{
 			width: 15em;
